<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TeamsFragment"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/llNewTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/no_tournament"
                    android:fitsSystemWindows="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_no_team"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_no_team_discripion"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/marigin_10dp" />

                <Button
                    android:id="@+id/btn_CreateTeam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/txt_create_team"
                    android:backgroundTint="@color/purple_500"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTeams"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

           <!-- <RelativeLayout
                android:id="@+id/rlSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center">-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_search"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconDrawable="@drawable/ic_search_white"
                    app:startIconTint="@color/black"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusBottomEnd="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textColorHint="@color/divider_color"
                        android:singleLine="true"
                        android:maxLines="1"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

           <!-- </RelativeLayout>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/team_grid_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/marigin_10dp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
